src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Corporate Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Refunded</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Donation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Refunded</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Application Submitted</fullName>
        </values>
        <values>
            <fullName>Awarded</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>LOI Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Refunded</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>In-Kind Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cultivating</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>In-Kind Not Yet Received</fullName>
        </values>
        <values>
            <fullName>In-Kind Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Major Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awarded</fullName>
        </values>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Identification</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Proposal%2FReview</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Refunded</fullName>
        </values>
        <values>
            <fullName>Solicitation</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NPSP_Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Application Submitted</fullName>
        </values>
        <values>
            <fullName>Awarded</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Cultivating</fullName>
        </values>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Identification</fullName>
        </values>
        <values>
            <fullName>In-Kind Not Yet Received</fullName>
        </values>
        <values>
            <fullName>In-Kind Received</fullName>
        </values>
        <values>
            <fullName>LOI Submitted</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Proposal%2FReview</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Refunded</fullName>
        </values>
        <values>
            <fullName>Solicitation</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Pledge</fullName>
        <description>AACR Foundation&apos;s existing corporate alliance process.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Refunded</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ddrive__DD Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Refunded</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CME_Funding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used by Foundation staff in Pledge Opportunity types to indicate whether the funding is for CME or non-CME.</description>
        <inlineHelpText>This field shows whether funding is for CME or non-CME.</inlineHelpText>
        <label>CME Funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Create_Sales_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevent auto-creation of Sales Order</description>
        <inlineHelpText>Prevent auto-creation of Sales Order</inlineHelpText>
        <label>Do Not Create Sales Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OrderApi__GL_Account__c.Distribution_Code__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c4g_AACR_Batch_Number__c</fullName>
        <label>AACR Batch Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c4g_Appeal_Code_Name__c</fullName>
        <description>Provides Appeal Code Description on the Opportunity object. Referenced by Opportunity Names (via NPSP Settings)</description>
        <formula>c4g_Appeal_Code__r.c4g_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appeal Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c4g_Appeal_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes the appeal code that relates to the specific opportunity</description>
        <label>Appeal Code</label>
        <referenceTo>Appeal_Code__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c4g_Check_Number__c</fullName>
        <label>Check Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c4g_Expected_Amount__c</fullName>
        <description>When informed of a future planned gift, the amount expected, if known</description>
        <label>Expected Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>c4g_Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c4g_Pledge_Type__c</fullName>
        <description>Denotes whether the pledge is made by an organization or an individual. Fonteva will transform the pledge data based on the value in this field. Organization pledges are reflected in GL immediately while individual pledges are not reflected until payment is received.</description>
        <inlineHelpText>Is this pledge from an individual or an organization?</inlineHelpText>
        <label>Pledge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c4g_Primary_Contact_First_Name__c</fullName>
        <description>First name of Primary Contact. Hidden field used for reference by Conga Mail Merge.</description>
        <formula>npsp__Primary_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c4g_Primary_Contact_Last_Name__c</fullName>
        <description>Last name of Primary Contact. Hidden field used for reference by Conga Mail Merge.</description>
        <formula>npsp__Primary_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c4g_Primary_Contact_Salutation__c</fullName>
        <description>Salutation for Primary Contact. Hidden field used for reference by Conga Mail Merge.</description>
        <formula>TEXT(npsp__Primary_Contact__r.Salutation)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>DonorDrive Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__Check_Number__c</fullName>
        <label>Check #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Address_1__c</fullName>
        <description>First line of Constituent Address</description>
        <label>Constituent Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Address_2__c</fullName>
        <description>Second line of Constituent Address</description>
        <label>Constituent Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Birthdate__c</fullName>
        <description>Constituent Birthdate</description>
        <label>Constituent Birthdate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Business_Phone_Extension__c</fullName>
        <description>If there is not enough space for Business Phone</description>
        <label>Constituent Business Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Business_Phone__c</fullName>
        <description>Business Phone of Constituent</description>
        <label>Constituent Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_City__c</fullName>
        <description>Constituent City</description>
        <label>Constituent City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Company_Name__c</fullName>
        <description>Constituent Company Name</description>
        <label>Constituent Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Country__c</fullName>
        <description>Constituent Country</description>
        <label>Constituent Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Email__c</fullName>
        <description>Constituent Email</description>
        <label>Constituent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_First_Name__c</fullName>
        <label>Constituent First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Gender__c</fullName>
        <label>Constituent Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Home_Phone__c</fullName>
        <description>Constituent Home Phone</description>
        <label>Constituent Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Last_Name__c</fullName>
        <label>Constituent Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Middle_Initial__c</fullName>
        <description>Constituent Middle Initial</description>
        <label>Constituent Middle Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Mobile_Phone__c</fullName>
        <description>Constituent Mobile Phone</description>
        <label>Constituent Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Postal_Code__c</fullName>
        <description>Constituent Postal Code</description>
        <label>Constituent Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_State__c</fullName>
        <description>Constituent State</description>
        <label>Constituent State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Credit_Card_Billing__c</fullName>
        <label>Credit Card Billing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Credit_Card_Authorization_Code__c</fullName>
        <label>Credit Card Authorization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Original_Processing_Fee_Amount__c</fullName>
        <label>Original Processing Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Deposit_Date__c</fullName>
        <label>Donation Deposit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Event_Ticket_Description__c</fullName>
        <label>Donation Event Ticket Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Event_Ticket_Quantity__c</fullName>
        <label>Donation Event Ticket Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Is_Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Donation Is Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Is_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Donation Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Option__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donation Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Payment_Description__c</fullName>
        <label>Donation Payment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Payment_Status_Text__c</fullName>
        <label>Donation Payment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Payment_Type__c</fullName>
        <label>Donation Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Receipt_Amount__c</fullName>
        <label>Donation Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Receipt_Date__c</fullName>
        <label>Donation Receipt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Receipt_ID__c</fullName>
        <label>Donation Receipt ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Recurring_Cancel_Date__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donation Recurring Cancel Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Recurring_Payment_Count__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donation Recurring Payment Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Refund_Date__c</fullName>
        <label>Donation Refund Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Registration_Fee_Promo_Code__c</fullName>
        <label>Donation Registration Fee Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Revenue_Type__c</fullName>
        <label>Donation Revenue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Transaction_ID__c</fullName>
        <label>Donation Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Transaction_Type__c</fullName>
        <label>Donation Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_is_Registration_Fee__c</fullName>
        <label>Donation is Registration Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Donation_Last_Modified__c</fullName>
        <label>Donation Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Donor_Display_Name__c</fullName>
        <label>Donor Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Gift_Description__c</fullName>
        <label>Gift Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_ID__c</fullName>
        <externalId>true</externalId>
        <label>DonorDrive ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Last_Modified_By__c</fullName>
        <label>Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Matching_Employer__c</fullName>
        <label>Matching Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Constituent_ID__c</fullName>
        <label>Participant Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Participant)</relationshipLabel>
        <relationshipName>ParticipantOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Personal_Campaign_Name__c</fullName>
        <label>Personal Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Processing_Fee_Paid__c</fullName>
        <label>Processing Fee Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Processing_Fee_Refund_Amount__c</fullName>
        <label>Processing Fee Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Recurring_Profile_ID__c</fullName>
        <label>Recurring Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Show_Donation_Amount__c</fullName>
        <label>Show Donation Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Show_Donor_Name__c</fullName>
        <label>Show Donor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Captain_Constituent_ID__c</fullName>
        <label>Team Captain Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Captain_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Captain</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Team Captain)</relationshipLabel>
        <relationshipName>TeamCaptainOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Captain_Email__c</fullName>
        <label>Team Captain Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Captain__c</fullName>
        <label>Team Captain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_ID__c</fullName>
        <label>Team ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Name__c</fullName>
        <label>Team Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Type__c</fullName>
        <label>Team Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Address_1__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Address_2__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Business_Phone_Extension_text__c</fullName>
        <label>Donor Business Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Business_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Business Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_City__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Company_Name__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Constituent_Id__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Constituent_Type__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Constituent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Country__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Email__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Entered_By__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Entered By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Home_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Middle_Initial__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Middle Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Mobile_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Postal_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_Previous_Receipt_Id__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor Previous Receipt ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_State__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Donor State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Donor)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor_is_Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Donor is Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_City__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Country__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_End_Date_Time__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Fiscal_Year__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Id__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Name__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Organization_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Organization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Program_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Site_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Site Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Start_Date_Time__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_State__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>